--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 style="margin-top : 40px">
                 <div class="col-6">
                     <div align="center">
-                        <span>
+                        <span class="consoleOrange">
                             Welcome to Bucephalus Studios!
                         </span>
                     </div>
@@ -52,7 +52,7 @@
                             <span>
                                 Create your own cult, perform demonic rituals, and amass a following that threatens empires.
                                 <span class="consoleRed">It's time to play god.</span> CultGame is a retro strategy RPG where you start your own religion in
-                                a procedurally generated fantasy world complete with <span class="consoleMagenta">haunting ASCII graphics</span>.
+                                a procedurally generated fantasy world complete with haunting ASCII graphics.
                             </span>
                             <br/>
                             <br/>
