--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                     <div>
                         <div>
                             <span>
-                                Create your own cult, perform demonic rituals, and amass a following that threatens empires.
-                                <span class="consoleRed">It's time to play god.</span> CultGame is a retro strategy RPG where you start your own religion in
+                                <span class="consoleRed">Create your own cult, perform demonic rituals, and amass a following that threatens empires.</span>
+                                <span style="font-weight : bold;">It's time to play god.</span>
+                                <br/>
+                                <br/>
+                                CultGame is a retro strategy RPG where you start your own religion in
                                 a procedurally generated fantasy world complete with haunting ASCII graphics.
                             </span>
                             <br/>
