--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
                     <div>
                         <div>
                             <span>
-                                <span class="consoleRed">Create your own cult, perform demonic rituals, and amass a following that threatens empires.</span>
-                                <span style="font-weight : bold;">It's time to play god.</span>
+                                <p class="consoleRed">
+                                    Create your own cult, perform demonic rituals, and amass a following that threatens empires.
+                                    <span style="font-weight : bold;">It's time to play god.</span>
+                                </p>
                                 <br/>
                                 <br/>
                                 CultGame is a retro strategy RPG where you start your own religion in
@@ -123,6 +125,7 @@
                                             <div class="optionalParent">
                                                 <div class="clear foot">
                                                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                                        style="background-color: #AA0000;"
                                                         value="Subscribe">
                                                 </div>
                                             </div>
