--- a/about.html
+++ b/about.html
@@ -33,42 +33,39 @@
     <!--View-->
     <div id="view" class="container-full-width justify-content-center">
 
+        <div>
+            <h2>About Bucephalus Studios</h2>
 
-        <h2>Bucephalus Studios</h2>
-
-        Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
-        toward making
-        interesting, original games that are not plagued by the problems of modern triple-A games like predatory
-        economies,
-        huge price tags, and bad player-developer relationships. We are inspired by the golden age of SNES RPGs, the
-        forgotten flash games
-        of Newgrounds, and esoteric hits like Dwarf Fortress to create worlds you can lose yourself in.
-        <br />
-        We are also a supporter of free open-source software. Check out our software page to see our programs you can
-        download
-        for free!
-
-
-        <h2>Jeff Stevens</h2>
-
-        For my professional profile and history, please see <a href="https://www.linkedin.com/in/jeff-s-819217123/">my
-            linkedin</a>.
-
-        Hi, I'm Jeff Stevens, and this was me as a kid. (show picture of me playing runescape as a kid)
-
-        I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west
-        of early
-        internet forums and image boards, and playing every flash game I could find on Newgrounds made me the game
-        developer I am today.
-        I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I
-        felt making games
-        would be the coolest way to express myself. So that's what I decided to do!
-
-        Nowadays, I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
-        mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
-        you'll find me doing olympic
-        saber fencing, watching horror movies, or cooking up some tikka masala in my kitchen.
-
+            Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
+            toward making interesting, original games that are not plagued by the problems of modern triple-A games like 
+            predatory economies, big price tags, and bad player-developer relationships. We are inspired by the quality of
+            masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad, and hope to combine
+            these virtues to create games that you can make a core part of your identity :)
+            <br />
+            <br />
+            We are also a supporter of free open-source software. Check out our software page to see our programs you can
+            download for free!
+        </div>
+        <div>
+        <h2>About Jeff Stevens</h2>
+            For my professional profile and history, please see <a class="consoleCyan" href="https://www.linkedin.com/in/jeff-s-819217123/">my linkedin</a>.
+            <br />
+            <br />
+            Hi, I'm Jeff Stevens, and this was me as a kid. (show picture of me playing runescape as a kid)
+            <img>
+            I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west
+            of early internet forums and image boards, and playing every flash game I could find on Newgrounds made me the game
+            developer I am today. 
+            <br />
+            <br />
+            I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I
+            felt making games would be the coolest way to express myself. So that's what I decided to do!
+            <br />
+            <br />
+            Nowadays, I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
+            mish-mash of other tasks that comes with pulling a game into the world kicking and screaming. Outside of work
+            you'll find me doing olympic saber fencing, watching horror movies, or cooking up some tikka masala in my kitchen.
+        </div>
 
     </div>
 
