--- a/about.html
+++ b/about.html
@@ -31,35 +31,41 @@
     </div>
 
     <!--View-->
-    <div id="view" class="container-full-width justify-content-center">
-
-        <div>
+    <div id="view" class="container-full-width justify-content-center" align="center">
+        <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
             <h2>About Bucephalus Studios</h2>
-
+            <img src="assets/bucephaluslogo_cropped_bottom.png" width="100%" height="100%" style="border-radius : 10px; margin-bottom : 10px;">
+            <br />
             Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
             toward making interesting, original games that are not plagued by the problems of modern triple-A games like 
             predatory economies, big price tags, and bad player-developer relationships. We are inspired by the quality of
             masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad, and hope to combine
-            these virtues to create games that you can make a core part of your identity :)
+            these virtues to create games that you can make a core part of your identity.
             <br />
             <br />
             We are also a supporter of free open-source software. Check out our software page to see our programs you can
             download for free!
         </div>
-        <div>
-        <h2>About Jeff Stevens</h2>
+        <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
+            <h2>About Jeff Stevens</h2>
+            <img src="assets/jeff.jpeg" width="50%" height="50%" style="border-radius : 10px; margin-bottom : 10px;">
+            <br />
             For my professional profile and history, please see <a class="consoleCyan" href="https://www.linkedin.com/in/jeff-s-819217123/">my linkedin</a>.
             <br />
             <br />
-            Hi, I'm Jeff Stevens, and this was me as a kid. (show picture of me playing runescape as a kid)
-            <img>
+            Hi, I'm Jeff Stevens, and this was me as a wee lad.
+            <img src="assets/weejeff.jpg" width="50%" height="50%" style="border-radius : 10px; margin-bottom : 10px;">
+            <br />
             I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west
             of early internet forums and image boards, and playing every flash game I could find on Newgrounds made me the game
             developer I am today. 
             <br />
             <br />
-            I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I
-            felt making games would be the coolest way to express myself. So that's what I decided to do!
+            I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I was
+            always mesmerized by the limitless possibilities of computers. I created silly little games in the Scratch programming
+            language in elementary school, and in high school my family supported my heavy involvement on the robotics team.
+            I went on to major in computer science at Denison University and started making CultGame after I took a class about cults
+            in the religion department.
             <br />
             <br />
             Nowadays, I work from home doing business as Bucephalus Studios designing games, writing code, and doing the
