--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,49 @@
-<span>
-    Feel free to email me at jeff@bucephalusstudios.com
-</span>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Bucephalus Studios - Home</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- Site Style -->
+    <link rel="stylesheet" href="assets/style.css">
+    <!-- Mailchimp form style -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_signup {
+            background: #fff;
+            color: #000;
+            clear: left;
+            width: 100%;
+        }
+
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+</head>
+
+<body>
+    <!--Header layout-->
+    <div id="loaded-header">
+    </div>
+
+    <!--View-->
+    <div id="view" class="container-full-width justify-content-center" align="center">
+        <h3>
+            Feel free to email me at jeff@bucephalusstudios.com
+        </h3>
+    </div>
+
+
+    <div id="loaded-footer">
+    </div>
+    
+    <!-- Add javascript before the end of the body -->
+    <script type="text/javascript" src="js/headerLoader.js"></script>
+    <script type="text/javascript" src="js/footerLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+</html>
