--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <!--View-->
     <div id="view" class="container-full-width justify-content-center" align="center">
-        <h3>
+        <h3 style="margin-top : 45px;">
             Feel free to email me at jeff@bucephalusstudios.com
         </h3>
     </div>
