--- a/about.html
+++ b/about.html
@@ -37,10 +37,12 @@
             <img src="assets/bucephaluslogo_cropped_bottom.png" width="100%" height="100%" style="border-radius : 10px; margin-bottom : 10px;">
             <br />
             Bucephalus Studios LLC is a sole-proprietor software company founded in 2021 by Jeff Stevens. We are dedicated
-            toward making interesting, original games that are not plagued by the problems of modern triple-A games like 
-            predatory economies, big price tags, and bad player-developer relationships. We are inspired by the quality of
-            masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad, and hope to combine
-            these virtues to create games that you can make a core part of your identity.
+            toward making interesting, original games that are not plagued by the problems of modern triple-A games like corporatized design,
+            predatory monetization, and bad-player developer relationships.
+            <br />
+            <br />
+            We are inspired by the quality of masterpieces like Chrono Trigger and the insanity of esoteric titles like Liberal Crime Squad,
+            and hope to combine these virtues to create games that you can make a core part of your identity.
             <br />
             <br />
             We are also a supporter of free open-source software. Check out our software page to see our programs you can
@@ -54,6 +56,7 @@
             <br />
             <br />
             Hi, I'm Jeff Stevens, and this was me as a wee lad.
+            <br/>
             <img src="assets/weejeff.jpg" width="50%" height="50%" style="border-radius : 10px; margin-bottom : 10px;">
             <br />
             I'm in my 20s now, and these memories of meeting up with my lunchtable friends in MMORPGs, braving the wild-west
@@ -61,9 +64,9 @@
             developer I am today. 
             <br />
             <br />
-            I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, but I was
-            always mesmerized by the limitless possibilities of computers. I created silly little games in the Scratch programming
-            language in elementary school, and in high school my family supported my heavy involvement on the robotics team.
+            I always had a yearning to bring my imaginations to life through playing make-believe and drawing comics, and I became
+            aware of computers and their ability to actualize my imaginations from a young age. I created little games in the Scratch programming
+            language during elementary school, and during high school my family supported my heavy involvement in an FRC robotics team.
             I went on to major in computer science at Denison University and started making CultGame after I took a class about cults
             in the religion department.
             <br />
