--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>  
     <head>
-        <title>Bucephalus Studios - Home</title>
+        <title>Bucephalus Studios - Games</title>
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!-- jQuery -->
@@ -29,10 +29,10 @@
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
-            <div class="row-g0 justify-content-center">
+            <div class="row g-0 justify-content-center gameCardRow">
                 <div class="col-3 gameCard" align="center">
-                    <img src="assets/cultgame-itch-capsule.png" width="90%" style="border-radius : 5px;">
-                    <div class="gameCardContent">         
+                    <div class="gameCardContent">
+                        <img src="assets/cultgame-itch-capsule.png" width="100%" style="border-radius : 5px;">   
                         <h2>CultGame</h2>
                         <p align="left">
                             Create your own cult, perform demonic rituals, and amass a following that threatens empires.
