--- a/software.html
+++ b/software.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>  
     <head>
-        <title>Bucephalus Studios - Home</title>
+        <title>Bucephalus Studios - Software</title>
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <!-- jQuery -->
@@ -28,37 +28,39 @@
         </div>
 
         <!--View-->
-        <div id="view" class="container-full-width justify-content-center">
-            
-            <h2>Software</h2>
-            <p>
-                Here, you can find software that we've created and have released to the public for free under various licenses. 
-                We hope you can find a use for our software in your own projects!
-            </p>
-            <div id="C++Libraries">
-                <h3>
-                    C++ Libraries
-                </h3>
-                <div>
-                    <h4>
-                        stevensTerminal
-                    </h4>
-                    <div>
-                        <span>Currently in development</span>
-                        An easy-to-use, powerful library for printing text in the terminal window with C++.
+        <div id="view" class="container-full-width justify-content-center" align="center">
+            <div style="margin-left : 20px; margin-top: 40px; max-width: 50%;" align="left">
+                <h2>Software</h2>
+                <p>
+                    Here, you can find software that we've created and have released to the public for free under various licenses. 
+                    We hope you can find a use for our software in your own projects!
+                </p>
+                <div id="C++Libraries" style="margin-top : 40px;">
+                    <h3>
+                        C++ Libraries
+                    </h3>
+                    <div class="softwareDiv">
+                        <h4>
+                            stevensTerminal
+                        </h4>
+                        <div>
+                            <span class="consoleOrange">Currently in development</span>
+                            <br/>
+                            An easy-to-use, powerful library for printing text in the terminal window with C++.
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <h4>
-                        stevensSound
-                    </h4>
-                    <div>
-                        <span>Currently in development</span>
-                        A simple library that plays sounds and manages sound libraries and playlists. Powered by SDL and SDL Mixer.
+                    <div class="softwareDiv">
+                        <h4>
+                            stevensSound
+                        </h4>
+                        <div>
+                            <span class="consoleOrange">Currently in development</span>
+                            <br/>
+                            A simple library that plays sounds and manages sound libraries and playlists. Powered by SDL and SDL Mixer.
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
 
 
