--- a/games.html
+++ b/games.html
@@ -29,7 +29,7 @@
 
         <!--View-->
         <div id="view" class="container-full-width justify-content-center">
-            <div class="row g-0 justify-content-center gameCardRow">
+            <div class="row g-0 justify-content-center gameCardRow" style="margin-top : 40px;">
                 <div class="col-3 gameCard" align="center">
                     <div class="gameCardContent">
                         <img src="assets/cultgame-itch-capsule.png" width="100%" style="border-radius : 5px;">   
